# LiteEFG

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
LiteEFG/: _LiteEFG.pyi  __init__.py  __init__.pyi  random.py  random.pyi
LiteEFG/GameInstances/: D24.game
LiteEFG/baselines/: Balanced_FTRL.py  Balanced_FTRL.pyi  Balanced_OMD.py  Balanced_OMD.pyi  Bil_QFR.py  Bil_QFR.pyi  CFR.py  CFRplus.py  CFRplus.pyi  CMD.py  CMD.pyi  DCFR.py  DCFR.pyi  DOMD.py  DOMD.pyi  FTPL.py  FTPL.pyi  IXOMD.py  MMD.py  MMD.pyi  OS_MCCFR.py  OS_MCCFR.pyi  PCFR.py  PCFR.pyi  QFR.py  QFR.pyi  README.md  Reg_CFR.py  Reg_CFR.pyi  Reg_DOMD.py  Reg_DOMD.pyi  __init__.py  __init__.pyi  baseline.py  baseline.pyi  utils.py  utils.pyi
LiteEFG/game_instances/: RPS.game  goofspiel.game  kuhn.game  leduc.game
LiteEFG/src/: __init__.pyi  main.cpp
LiteEFG/src/Basic/: BasicFunction.cpp  BasicFunction.h  Constants.cpp  Constants.h  FileReader.cpp  FileReader.h
LiteEFG/src/Computation/: Graph.cpp  Graph.h  GraphNode.cpp  GraphNode.h  Operations.cpp  Operations.h  Projection.cpp  Projection.h  Static.cpp  Static.h
LiteEFG/src/Data/: Tensor.cpp  Tensor.h  Vector.cpp  Vector.h
LiteEFG/src/Environment/: Environment.cpp  Environment.h  Infoset.cpp  Infoset.h  SequenceForm.cpp  SequenceForm.h  __init__.pyi
LiteEFG/src/Environment/FileEnvironment/: FileEnvironment.cpp  FileEnvironment.h
stubs/LiteEFG/: _LiteEFG.pyi  __init__.pyi  random.pyi
stubs/LiteEFG/baselines/: CMD.pyi  DCFR.pyi  FTPL.pyi  MMD.pyi  Reg_CFR.pyi  Reg_DOMD.pyi  __init__.pyi
(+8 files in other folders)
